[gd_scene load_steps=6 format=3 uid="uid://mvxeej36kptf"]

[ext_resource type="Script" path="res://Scenes/Menus/Settings/Settings.gd" id="1_02iur"]
[ext_resource type="Script" path="res://UI/SafeControl/safe_control.gd" id="1_07r1w"]
[ext_resource type="PackedScene" uid="uid://5kiirn6rgdru" path="res://Scenes/UIBackground/UIBackground.tscn" id="2_25tlc"]
[ext_resource type="Theme" uid="uid://dsgu4tme5hp8f" path="res://Themes/Menu/menu_theme.tres" id="2_mkfaj"]
[ext_resource type="PackedScene" uid="uid://dofspa3v0y84e" path="res://Scenes/Menus/UIElements/Exit.tscn" id="5_bkbqs"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_02iur")

[node name="UIBackground" parent="." instance=ExtResource("2_25tlc")]
scrolling_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mkfaj")
script = ExtResource("1_07r1w")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="MusicCheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"

[node name="SoundEffectCheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Sound effects"

[node name="VibrationsCheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Vibrations
"

[node name="Exit" parent="MarginContainer" instance=ExtResource("5_bkbqs")]
layout_mode = 2

[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/MusicCheckBox" to="." method="_on_music_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/SoundEffectCheckBox" to="." method="_on_sound_effect_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/VibrationsCheckBox" to="." method="_on_vibration_check_box_toggled"]
